fix: icon align issue

--- a/src/icons.css
+++ b/src/icons.css
@@ -1,3 +1,5 @@
-.vue-icon > svg {
-	vertical-align: middle;
+.vue-icon {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
